--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -40,6 +40,7 @@ mark{
 }
 a {
     cursor: pointer;
+    color: #000;
 }
 div.left {
     float: left;
@@ -59,25 +60,19 @@ body {
 ul {
     list-style: none;
 }
-ul.inline {
-	width:100%;
-	display:inline-block;
-}
-ul.inline li {
-	width:40% !important;
-	float:left;
-	margin-right:10px;
-}
-ul.inline li select {
-	width:100%;
-}
 table {
     border-collapse: collapse;
     border-spacing: 0;
-    width: 100%;
+}
+table tr {
+    display: inline-block;
+    width: 97%;
+    border: 1px solid;
+    padding: 7px;
+    margin-bottom: -1px;
 }
 .container {
-    padding: 20px 0;
+    padding: 15px 3px;
 }
 /* ICONOS */
  
@@ -126,14 +121,19 @@ header h1 {
 .menuList li {
     margin: 15px 5px;
 }
-table div tr td{
-    width:100%;
+table {
+    margin-bottom:20px;
 }
-th,
-td {
-    padding: 12px;
+table td {
+    display:inline-block;
+    width:15%;
     text-align: left;
-    border: 1px solid black;
+}
+table td:first-child {
+    width:59%;
+}
+table td:last-child {
+    width:24%;
 }
 label {
     padding: 10px 0;
@@ -160,10 +160,6 @@ button,
     padding: 13px;
 }
 /*DISPOSITIVOS*/
-table.dispositivos {
-    margin-bottom:20px;
-}
-/*SALIDAS*/
 table.salidas td{
     display:inline-block;
 }
@@ -184,8 +180,16 @@ table.salidas td h4 {
 .switch.on:after {
     content: "Encendida";
 }
+.switch:after {
+    content: "Apagada";
+    color:#000;
+}
+.switch.on:after {
+    left:10px;
+    color: #fff;
+}
 .switch.on .switch-toggle {
-    left:84%;
+    left:84% !important;
 }
 .luz0, 
 .switch.on {
