--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -73,21 +73,21 @@ table {
 }
 table tr {
     display: inline-block;
-    width: 97%;
+    width: 100%;
     border: 1px solid #8EA69E;
     margin-bottom: -1px;
 }
 .container {
-    padding: 15px 0px 10px 10px;
+    padding:15px 10px 10px 10px    
 }
 /* ICONOS */
 .iconReloj {
-    position:fixed;
-    top:0;
-    left:1.3em;
-    z-index:2;
-    font-size:2.6em !important;
-    color:#fff;
+    position: fixed;
+    top: 3px;
+    left: 1.3em;
+    z-index: 2;
+    font-size: 2.3em!important;
+    color: #fff;
 }
 .iconReloj span {
     font-size:.6em !important;
@@ -214,6 +214,7 @@ button,
     background:#fff;
     top: 50%;
     left: 50%;
+    z-index: 3;
     margin-top: -100px;
     margin-left: -25%;
     padding:10px;
@@ -257,13 +258,15 @@ button,
 /*SALIDAS*/
 .salidas td:last-child {
     padding: 12px;
-    width:25%; 
+    width: 120px;
 }
 
 table.salidas td{
     display:inline-block;
     border:none !important;
-    width: 65%;
+}
+table.salidas tr td:last-child {
+    float:right;
 }
 table.salidas td h4 {
     float:left;
