--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -255,6 +255,30 @@ table.dispositivos td {
     padding:6px 5px 0px 5px;
 }
 
+table.dispositivos tr td div{
+    width:50%;
+    position:relative;
+    display:inline-block;
+}
+table.dispositivos tr td div input{
+    float:left;
+    width:100%;
+}
+td.editRowtrue a {
+  position:absolute;
+  right:-50px;
+  top:0;
+}
+table.dispositivos tr td {
+    display:block;
+    height:37px;
+}
+table.dispositivos tr td:last-child {
+    position:absolute;
+    right:15px;
+    top:4px;
+    width:90px;
+}
 .iconEdit {
     font-size:2em !important;
 }
