Icono reloj para modificar horarios en subtareas

--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -396,7 +396,7 @@ table.tareas td:last-child a{
 }
 table .iconReloj {
     position:relative;
-    color:#000;
+    color:#03ae74;
     left:0;
 }
 .col3 td {
