--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -96,6 +96,13 @@ td.middle + td{
 }
 /* ICONOS */
 
+.container > div ul {
+    right:60px;
+}
+.container > div ul:first-child {
+    top:7px;
+    right:100px;
+}
 a[class*="icon"] {
     color:#fff;
     font-size:1.3em; 
@@ -251,39 +258,18 @@ button,
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 .popup {
-    position:fixed;
-    width:50%;
-    height:200px;
-    border:1px solid green;
-    background:#fff;
-    top: 50%;
-    left: 50%;
-    z-index: 3;
-    margin-top: -100px;
-    margin-left: -25%;
-    padding:10px;
     box-shadow: 0px 0px 0px 1000px rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    width:90%;
+    text-align:center;
+    margin:20px auto;
+}
+.popup *{
+    width:auto;
+    margin:30px 10px 0 10px;
 }
 .popup input {
-    display: block;
-    padding: 25px;
-    text-align: center;
-    margin: 26px auto;
-}
-.popup input[type='time'] {
-    font-size: 2em;
-    padding: 1px 0;
-    width: 160px;
-}
-.popup input[type='button'] {
-    position: fixed;
-    padding: 0;
-    width: 162px;
-    height: 50px;
-    top: 50%;
-    left: 50%;
-    margin-top: 40px;
-    margin-left: -70px;
+    padding:10px;
+    width:80%;
 }
 /*DISPOSITIVOS*/
 table.dispositivos td {
