--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -107,19 +107,28 @@ a[class*="icon"] {
     color:#fff;
     font-size:1.3em; 
 }
-.headerIcons li{
-    float:left;    
-}
 .headerIcons a{
     position:relative;
     z-index:9;
 }
-.headerIcons {
+.listIcons{
     display:inline-block;
+    z-index:2;
+}
+.listIcons li{
+    margin-left: 14px;
+    float:left;    
+}
+.headerIcons {
     position:fixed;
     top: 10px;
     right: 57px;
-    z-index:2;
+}
+.iconINACTIVA:before {
+    content: "\2610"
+}
+.iconACTIVA:before {
+    content: "\2611"   
 }
 .iconMAS:before {
     content: "\271A"
@@ -407,21 +416,14 @@ table.tareas tr td:last-child a {
     font-size:2.1em;
     color:#03ae74;
 }
-table.tareas td a {
-    top:-3px !important;
-    left:-10px;
-}
 table.tareas tr div {
     width:96%;
-}
-table.tareas td:last-child a{
-    float:left;
-    margin-left:10px;
 }
 table .iconReloj {
     position:relative;
     color:#03ae74;
     left:0;
+    top: -3px;
 }
 .col3 td {
     width:32%;
