--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -292,6 +292,9 @@ button,
     width:90%;
     text-align:center;
     margin:20px auto;
+    background:#fff;
+    position:fixed;
+    z-index:5;
 }
 .popup *{
     width:auto;
