Funcion para eliminar tareas

--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -177,6 +177,9 @@ a[class*="icon"] {
 .iconReloj:before {
     content: "\23f1"
 }
+.iconDELETE {
+    color:red !important;
+}
 .iconDELETE:after {
     content: "\2717"
 }
