--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -39,6 +39,11 @@ a {
     cursor: pointer;
     color: #000;
 }
+.center {
+  margin: auto;
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
+}
 .showfalse {
     display:none !important;
 }
@@ -157,7 +162,7 @@ a[class*="icon"] {
 }
 .iconMAS{
     font-size: 1.5em!important;
-    top: 6px;
+    top: 2px;
 }
 .iconOK{
     font-size:2.1em !important;
@@ -312,7 +317,8 @@ button,
 }
 /*DISPOSITIVOS*/
 .popup.dispositivos {
-    width:300px;
+    width: 300px;
+    height: 254px;
 }
 table.dispositivos td {
     padding:6px 5px 0px 5px;
