--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -140,12 +140,13 @@ header{
 .headerIcons {
     float: right;
     top: 6px;
+    right:7px;
     position: relative;
 }
 
 .headerIcons li {
     float:left;
-    width:70px;
+    width:50px;
 }
 .headerIcons li:last-child {
     width:30px;
@@ -166,13 +167,38 @@ header li.iconReloj {
 header li.iconReloj a {
      font-size: 1.8em !important;
 }
-header .iconMAS { margin-top:5px !important; }
+header .iconMAS, header .iconR { margin-top:5px !important; }
 
 .headerIcons li a.menu
 {
   margin-top:8px;
 }
 
+header, .footer {
+    background-color: #03ae74;
+    width: 100%;
+    height: 50px;
+    text-align: left;
+    top: 0;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+}
+.footer {
+    bottom:0;
+    top:auto;
+}
+.footer .listIcons {
+    padding:3px 7px;
+}
+.footer .listIcons li {
+    width:35px;
+    margin-right:20px;
+    padding-top:10px;
+}
+.footer .listIcons .iconReloj {
+    width:70px;
+}
 header h1 {
     position:absolute;
     top:0;
@@ -185,7 +211,7 @@ a[class*="icon"], li[class*="icon"] a {
 .listIcons{
     display:inline-block;
     z-index:2;
-    padding: 20px 21px 16px 21px;
+    padding: 20px 0 16px 0;
     width: 100%;
 }
 .listIcons li{
@@ -220,6 +246,13 @@ a[class*="icon"], li[class*="icon"] a {
 
 li.iconReloj a span {
     font-size: .6em!important;
+}
+li .iconAdmin:before {
+    content: "\2699";
+}
+li .iconAdmin {
+    font-size:1.8em;
+    padding-top:2px;
 }
 li.iconReloj a:before { content: "\23f1" }
 .iconDELETE { color:red !important; }
@@ -501,6 +534,9 @@ table td ul li.iconReloj a {
     color:#03ae74;
     left:0;
     top: -3px;
+}
+.icons .listIcons {
+    text-align:center;
 }
 .col3 td {
     width:32%;
